--- a/styles.css
+++ b/styles.css
@@ -14,15 +14,30 @@ body{
 
 
 .heading-section{
-    background-image: url(images/desktop/image-header.jpg) ;
+    background-image: url(images/mobile/image-header.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
+        
     
 
+}
+
+
+@media (min-width: 50em){
+    .heading-section{
+    background-image: url(images/desktop/image-header.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    
+    }
+    
 }
 
 .header{
@@ -83,48 +98,134 @@ body{
     font-size: 30px;
     padding-top: 5rem;
     font-family: 'Fraunces', serif;
-    letter-spacing: 0.7rem;
+    letter-spacing: 0.5rem;
 }
 
 svg{
     position: absolute;
     align-self: center;
-    margin-top: 20rem;
+    margin-top: 25rem;
 }
 
-.Services1{
-    /* height: 100vh; */
+
+@media (min-width: 50em){
+    svg{
+        position: absolute;
+        align-self: center;
+        margin-top: 20rem;
+    }
+}
+
+.Services{
     display: grid;
-    grid-template-columns: repeat(2,  1fr);
-    width: 100%;
+    grid-template-columns: repeat( auto-fit, minmax(30rem,  1fr));
 }
 
 
-.Transform-Image.Services1{
-    width: 100%;
-}
     
-.Transform-Image{
+.Transform-Image, .Stand-out-Image{
+    display: block;
     width: 100%;
-    height: 700px;
-    border-color: red;
 }
 
-.Transform-text.Service1{
+.Transform-text.Service{
     font-family: 'Fraunces', serif;
     display: flex; 
     flex-direction: column;
     justify-self: center;
     align-items: center;
-    padding-top:  12rem;
+    padding-top:  6rem;
     margin: 5rem auto;
-    /* color: white; */
+}
+
+
+.Transform-Text.Service{
+    display: block;
 }
 
 .headings.Transform{
+    padding-top: 1rem;
     margin-bottom: 2rem;
     padding-right: 8rem;
     padding-left: 8rem;
     font-size: 2.5rem;
+    color: hsl(212, 27%, 19%);
 }
 
+.Transform-paragraphs{
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    padding-left: 6.5rem;
+    padding-right: 4rem;
+    line-height: 2rem;
+    color: hsl(232, 10%, 55%);
+}
+
+.Transform-buttons{
+    font-family: 'Fraunces', serif;
+    text-transform: uppercase;
+    background-color: white;
+    border: none;
+    align-self: flex-start;
+    margin: 0rem 8rem;
+    letter-spacing: 0.1rem;
+    font-size: 1rem;
+    position: relative;
+    top: 25px;
+
+} 
+
+.Transform-buttons:hover{
+   border-bottom: 9px solid yellow; 
+}
+
+
+.Stand-out-text.Service  {
+    font-family: 'Fraunces', serif;
+    display: flex; 
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    padding-top:  6rem;
+    margin: 5rem auto;
+    
+}
+
+
+ .headings.Stand-out{
+    padding-top: 1rem;
+    margin-bottom: 2rem;
+    padding-right: 8rem;
+    padding-left: 7rem;
+    font-size: 2.5rem;
+    color: hsl(212, 27%, 19%)
+ }
+
+ .paragraphs.Stand-out{
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    padding-left: 6.5rem;
+    padding-right: 4rem;
+    line-height: 2rem;
+    color: hsl(232, 10%, 55%);
+}
+
+ .buttons.Stand-out{
+    font-family: 'Fraunces', serif;
+    text-transform: uppercase;
+    background-color: white;
+    border: none;
+    align-self: flex-start;
+    margin: 0rem 8rem;
+    letter-spacing: 0.1rem;
+    font-size: 1rem;
+    position: relative;
+    top: 25px;
+ } 
+
+ .buttons.Stand-out:hover{
+    border-bottom: 9px solid red;
+ }
+
+
+ 
