--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+   
 }
 
 
 body{
     font : 18px;
-    
+    width: 100%;
     
 }
 
@@ -21,30 +22,20 @@ body{
     width: 100%;
     display: flex;
     flex-direction: column;
-        
-    
-
-}
-
-
-@media (min-width: 50em){
-    .heading-section{
-    background-image: url(images/desktop/image-header.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-    flex-direction: column;
-    
-    }
     
 }
+
+
 
 .header{
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    box-sizing: border-box;
+    width: 100%;
+    justify-content: space-between; 
     padding: 2rem 3rem;
+    
 }
 
 
@@ -52,6 +43,7 @@ body{
     font-family: 'Barlow', sans-serif;
     color: white;
     padding-bottom: 2rem;
+    width: 100%;
 }
 
 .header a{
@@ -84,7 +76,7 @@ body{
 }
 
 .nav-bar ul{
-    display: flex;
+    display: block ;
 }
 
 .nav-bar ul li{
@@ -108,7 +100,39 @@ svg{
 }
 
 
+
 @media (min-width: 50em){
+    .heading-section{
+    background-image: url(images/desktop/image-header.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    flex-direction: column;
+    
+    }
+
+    .header{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 2rem 3rem;
+    }
+
+    .nav-bar ul{
+        display: flex;
+    }
+    
+    
+}
+
+
+
+
+
+
+@media (min-width: 25em){
     svg{
         position: absolute;
         align-self: center;
@@ -119,15 +143,11 @@ svg{
 .Services{
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(30rem,  1fr));
+    width: 100%;
 }
 
 
     
-/* .Transform-Image, .Stand-out-Image{
-    display: block;
-    width: 100%;
-} */
-
 .Service.Stand-out-Image.desktop{
  background-image: url(images/desktop/image-stand-out.jpg);
 }
@@ -290,7 +310,7 @@ svg{
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    /* height: 79vh; */
+    height: 79vh;
     display: flex;
     flex-direction:column;
     justify-content: flex-end;
@@ -343,33 +363,36 @@ svg{
  .Testimonials{
      display: flex;
      height: 100vh;
-     justify-content:space-around;
+     /* justify-content:space-around; */
      align-items: center;
       gap: 1rem;
      text-align: center;
+     width: 100%;
 
  }
 
  .Jennie-img, .Thomas-img, .Emily-img{
      border-radius: 10000rem;
      width: 5rem;
-     margin-top: 4rem;
+     margin-top: 3rem;
  }
 
 
  .Emily-img{
      margin-left: 9rem;
+     margin-top: 3rem;
  }
 
 
  .Thomas-img{
-    margin-left: 5rem;
+    margin-left: 6.5rem;
  }
 
 
- /* .Jennie-img{
- margin-right: 20rem;
- } */
+ .Jennie-img{
+     margin-left: 2rem;
+ 
+ } 
 
 
 
@@ -379,37 +402,214 @@ svg{
     font-weight: 700;
     line-height: 1.7rem;
     margin-top: 3.5rem;
-    
+    margin-bottom: 3rem;
 
  }
 
  .Testimonial-Jennie.paragraph{
-    padding-left: 0.1rem;
-    padding-right: 4rem;
+    padding-left: 3rem;
+    padding-right: 0.1rem;
     text-align: center;
     position: relative;
     right: 7rem
  }
 
  .Testimonial-Emily.paragraph{
-    padding-left: 10rem;
-    padding-right: 1rem;
+    padding-left: 8rem;
+    padding-right: 0rem;
     text-align: center;
     line-height: 1.7rem;
-    position:relative;
-    left: 2rem;
- }
+     position:relative;
+    left: 2rem; 
+ } 
 
  .Testimonial-Thomas.paragraph{
-     padding-left: 5rem;
-     padding-right: 6rem;
+     padding-left: 9rem;
+     padding-right: 3rem;
     text-align: center;
     line-height: 1.7rem;
     position:relative;
-    right: 2rem;
+     right: 4rem;
+    /* margin-left: 2rem  */
  }
 
+
+
+
+ .Testimonial-Emily.name,.Testimonial-Thomas.name,.Testimonial-Jennie.name{
+    font-family: 'Fraunces', serif;
+    font-weight: 900;
+    margin-bottom: 0.5rem;
+ }
 
  .Testimonial-Emily.name{
-
+    padding-left: 11rem;
  }
+
+ .Testimonial-Jennie.name{
+     padding-right: 10rem;
+ }
+
+
+ .Testimonial-Thomas.occupation,.Testimonial-Jennie.occupation,.Testimonial-Emily.occupation{
+    color:hsl(212, 9%, 39%);
+    font-family: 'Barlow', sans-serif;
+    opacity: 0.7;
+ }
+
+ .Testimonial-Emily.occupation{
+     padding-left: 11rem;
+ }
+
+ .Testimonial-Jennie.occupation{
+     padding-right: 9rem;
+ }
+
+ .Pictures{
+     display: grid;
+     grid-template-columns: repeat( auto-fit, minmax(15rem,  1fr));
+ }
+
+
+.Picture1.mobile{
+    background-image: url(images/mobile/image-gallery-milkbottles.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+.Picture2.mobile{
+    background-image: url(images/mobile/image-gallery-orange.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+.Picture3.mobile{
+    background-image: url(images/mobile/image-gallery-cone.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+.Picture4.mobile{
+    background-image: url(images/mobile/image-gallery-sugar-cubes.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+
+@media (min-width: 50em){
+
+ .Picture1.desktop{
+    background-image: url(images/desktop/image-gallery-milkbottles.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+.Picture2.desktop{
+    background-image: url(images/desktop/image-gallery-orange.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+.Picture3.desktop{
+    background-image: url(images/desktop/image-gallery-cone.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+.Picture4.desktop{
+    background-image: url(images/desktop/image-gallery-sugarcubes.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 25rem;
+}
+
+}
+
+.Contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: auto;
+    background-color:hsla(168, 34%, 41%, 90%);
+    color:hsl(167, 40%, 24%);
+    text-align: center;
+
+}
+
+.footer-heading{
+    font-family: 'Barlow', sans-serif;
+    font-weight: 700;
+    color:hsl(167, 40%, 24%);
+    text-align: center;
+    margin-top: 5rem;
+    font-size: 1.3rem;
+}
+
+
+.footer-nav a{
+    /* font-family: 'Fraunces', serif; */
+    font-family: 'Barlow', sans-serif;
+   text-decoration: none;
+   display: flex;
+   color:hsl(167, 40%, 24%);
+   font-size: 1.2rem;
+   margin-top: 2rem;
+   
+}
+
+
+.footer-nav a:hover{
+    color : white;
+    
+}
+
+.footer-nav ul{
+    list-style: none;
+}
+
+.footer-nav ul li{
+   list-style: none;
+   padding-bottom: 6rem;
+}
+
+.footer-nav ul{
+   display: flex ;
+}
+
+.footer-nav ul li{
+   margin-left: 2rem;
+   padding-left: 2rem;
+}
+
+.icons{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 4rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    margin-left: 2rem;
+    gap: 1rem;
+    text-align: center;
+    align-self: center;
+}
+
+.icon-facebook:hover{
+ color : white;
+}
+
+
